# dart_cuda

./: .gitignore  README.md  STRUCTURE.md  commands.md  engine.cu  engine_v1.cu  engine_v1.h  engine_v2.cu  matmul.cu  pubspec.yaml
python/: .gitignore  README.md  pyproject.toml
python/dart_cuda/: __init__.py
python/dart_cuda/core/attention/: aft.py  aft_cross_attention.py  aft_multi_head_attention.py  aft_multi_head_cross_attention.py  cross_attention.py  multi_head_attention.py  multi_head_cross_attention.py  self_attention.py
python/dart_cuda/core/layers/: conv_2d.py  feed_forward.py  layer_norm.py  mlp.py  moe_feed_forward.py  nn.py  rms_norm.py  swiglu_moe_feed_forward.py
python/dart_cuda/core/optimizers/: adam.py  stochastic_grad_desc.py
python/dart_cuda/core/tensor/: __init__.py  cuda_engine.py  (+1 more)
python/dart_cuda/loaders/: image_folder_loader.py  images.py  triplet_loader.py  triplet_loader2.py
python/docs/: README.md  attention.md  getting_started.md  layers.md  loaders.md  memory_model.md  optimizers.md  parity.md  persistence.md  pytorch_interop.md  standard_transformer.md  tensor.md  transformers.md
python/examples/: load_pytorch_checkpoint.py  overfit.py  save_load_checkpoint.py  train_standard_transformer.py  train_xor.py  transformer_encoder_forward.py
python/tests/: README.md  _compat.py  conftest.py  run_tests.py  test_attention.py  test_layers.py  test_moe.py  test_optimizers.py  test_tensor_autograd.py  test_tensor_basics.py  test_tensor_ops.py  test_training_smoke.py  test_transformers.py
python/tools/: export_to_safetensors.py
(+253 files in other folders)
